--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,8 +15,9 @@
   top: 0;
   right: 0;
   bottom: 0;
+  width: auto;
   background-color: #f5f5f5;
-  overflow: auto;
+  overflow: hidden;
   z-index: 1;
   transition: left 0.3s ease;
 }
